create nginx routing + swagger on api

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,3 +4,12 @@ services:
   api:
     command: 
       npm run dev
+    volumes:
+      - ./api:/usr/src/app
+
+  front:
+    command: 
+      npm run dev
+    volumes:
+      - ./front:/usr/src/app
+    
