--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3.8'
 
 services:
+
   api:
     build: ./api
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./api:/usr/src/app
     depends_on:
       - db
     env_file:
       - ./.env
+    restart: always
 
-    restart: on-failure
+  front:
+    build: ./front
+    restart: always
 
   database:
     image: postgres:12
@@ -22,6 +22,17 @@ services:
       - ./.env 
     volumes:
       - pgdata:/var/lib/postgresql/data
+    restart: always
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
+      - front
     restart: always
 
 volumes:
